test/src/e2e_vm_tests/test_programs/should_fail/diverging_never/src/main.sw
script;

fn main() {
    let _b = {
        return 5;
    }[0];

    let _: ! = 123u8;  // ERROR.
}
